# rough-draft

./: .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  start.sh
app/: api.py  auth.py  db.py  email.py  main.py  mappers.py  models.py  repo.py  repo_votes.py  repo_votes_bulk.py  schemas.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 0001_init.py  0002_votes.py  0003_career_summary.py  0004_users_comments.py  0005_ol_season_stat.py  0006_user_mod_flag.py  0007_email_verification.py  594be24f1f16_add_player_dim_and_player_game_stat.py  d8ed25393ef5_add_gsis_id_to_player.py  (+1 more)
app/services/: ingest.py  ingest_csv.py  ingest_csvs.py  outcomes.py
data/drafts/: draft_picks_2000.csv  draft_picks_2001.csv  draft_picks_2002.csv  draft_picks_2003.csv  draft_picks_2004.csv  draft_picks_2005.csv  draft_picks_2006.csv  draft_picks_2007.csv  draft_picks_2008.csv  draft_picks_2009.csv  draft_picks_2010.csv  draft_picks_2011.csv  draft_picks_2012.csv  draft_picks_2013.csv  draft_picks_2014.csv  draft_picks_2015.csv  draft_picks_2016.csv  draft_picks_2017.csv  draft_picks_2018.csv  draft_picks_2019.csv  draft_picks_2020.csv  draft_picks_2021.csv  draft_picks_2022.csv  draft_picks_2024.csv  draft_picks_2025.csv
frontend/rough-draft-ui/: Dockerfile  next.config.ts  package-lock.json  package.json  railway.toml  tailwind.config.ts
scripts/: dev.ps1  ingest_csvs.py  ingest_ol_stats.py  ingest_player_stats_subset.py  ingest_players_nfl.py  run_ingest_demo.py  seed_votes.py
(+15 files in other folders)
