[project]
name = "nfl-draft-board-api"
version = "0.1.0"
description = "FastAPI backend for an NFL draft board with drilldowns."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-dateutil>=2.9",
]

[tool.uvicorn]
factory = true
