[project]
name = "nfl-draft-board-api"
version = "0.1.0"
description = "FastAPI backend for an NFL draft board with drilldowns."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-dateutil>=2.9",
  "PyJWT>=2.8",
  "passlib[bcrypt]>=1.7",
  "bcrypt>=3.2,<4.0",
  "python-multipart>=0.0.9",
  "slowapi>=0.1.9",
]

[tool.uvicorn]
factory = true
